--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2308,32 +2308,104 @@ body {
 .cid-ri3d2nd4pG H3 {
   text-align: center;
 }
-.cid-ri4utcDo72 {
+.cid-ri8lXtwp0m {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
-.cid-ri4utcDo72 .title {
-  margin-bottom: 2rem;
-}
-.cid-ri4utcDo72 .mbr-section-subtitle {
+.cid-ri8lXtwp0m .mbr-section-subtitle {
   color: #767676;
 }
-.cid-ri4utcDo72 a:not([href]):not([tabindex]) {
-  color: #fff;
-  border-radius: 3px;
+.cid-ri8lXtwp0m .formoid {
+  margin: auto;
 }
-.cid-ri4utcDo72 a.btn-white:not([href]):not([tabindex]) {
+.cid-ri8lXtwp0m .form-control {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.cid-ri8lXtwp0m a.btn {
+  flex: 0 0 auto;
+  -webkit-flex: 0 0 auto;
+}
+.cid-ri8lXtwp0m .input-group-btn {
+  align-self: center;
+  -webkit-align-self: center;
+  z-index: 3;
+}
+.cid-ri8lXtwp0m .input-group-btn .btn {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
+.cid-ri8lXtwp0m a:not([href]):not([tabindex]) {
+  color: #fff;
+}
+.cid-ri8lXtwp0m a.btn-white:not([href]):not([tabindex]) {
   color: #333;
 }
-.cid-ri4utcDo72 .multi-horizontal {
-  flex-grow: 1;
-  -webkit-flex-grow: 1;
-  max-width: 100%;
+.cid-ri8lXtwp0m .mbr-subscribe .input-group-btn {
+  display: inline-block;
 }
-.cid-ri4utcDo72 .input-group-btn {
-  display: block;
-  text-align: center;
+.cid-ri8lXtwp0m .mbr-subscribe .input-group-btn button,
+.cid-ri8lXtwp0m .mbr-subscribe .input-group-btn a {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
+@media (max-width: 350px) {
+  .cid-ri8lXtwp0m .mbr-subscribe {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-ri8lXtwp0m input[type="email"] {
+    width: 100%;
+    margin-bottom: 2px;
+  }
+  .cid-ri8lXtwp0m .input-group-btn {
+    width: 100%;
+  }
+  .cid-ri8lXtwp0m .input-group-btn .btn {
+    border-radius: 3px;
+  }
+}
+@media (max-width: 768px) {
+  .cid-ri8lXtwp0m .input-group-btn a.btn {
+    width: 100%;
+  }
+  .cid-ri8lXtwp0m .input-group-btn {
+    width: calc(92%);
+  }
+  .cid-ri8lXtwp0m .input-group-btn button[type="submit"] {
+    width: 100%;
+  }
+  .cid-ri8lXtwp0m .input-group {
+    display: -webkit-flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: auto;
+    max-width: 300px;
+    -webkit-flex-direction: column;
+    -webkit-flex-wrap: wrap;
+  }
+  .cid-ri8lXtwp0m .input-group input[type="email"] {
+    width: 100%;
+    margin-bottom: 3px;
+  }
+  .cid-ri8lXtwp0m .input-group span {
+    display: inline;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-ri8lXtwp0m .input-group-btn button,
+  .cid-ri8lXtwp0m .input-group-btn a {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+}
+@media (min-width: 769px) {
+  .cid-ri8lXtwp0m .mbr-subscribe > * {
+    margin: 0 0.5rem;
+  }
 }
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
